--- a/Backend-API/package.json
+++ b/Backend-API/package.json
@@ -15,6 +15,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "iconv-lite": "^0.5.1",
     "morgan": "^1.10.0"
