--- a/Frontend/shortly/package.json
+++ b/Frontend/shortly/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "rxjs": "~6.5.4",
+    "shortid": "^2.2.15",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -30,7 +31,7 @@
     "@angular/language-service": "~9.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.34",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
