--- a/Frontend/shortly/package.json
+++ b/Frontend/shortly/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "lite-server"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.34",
     "codelyzer": "^5.1.2",
+    "connect-history-api-fallback": "^1.6.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.4.1",
@@ -40,6 +42,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "lite-server": "^2.5.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
