--- a/Frontend/shortly/package.json
+++ b/Frontend/shortly/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "bootstrap": "^4.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.5.4",
     "shortid": "^2.2.15",
     "tslib": "^1.10.0",
